--- a/Source Code/i18n/en.json
+++ b/Source Code/i18n/en.json
@@ -33,8 +33,8 @@
   "CalendarFri": "Fri",
   "CalendarSat": "Sat",
   "CalendarSun": "Sun",
-  "MainQuantity": "Quantity",
-  "MainDuration": "Duration",
+  "MainQuantity": "Quantity111",
+  "MainDuration": "Duration222",
   "MainIncomplete": "Incomplete",
   "MainNoWinStats": "No Win Stats",
   "MainBGG": "BGG",
