--- a/Source Code/i18n/es.json
+++ b/Source Code/i18n/es.json
@@ -33,8 +33,8 @@
   "CalendarFri": "vie",
   "CalendarSat": "sáb",
   "CalendarSun": "dom",
-  "MainQuantity": "Quantity333",
-  "MainDuration": "Duration444",
+  "MainQuantity": "Cantidad",
+  "MainDuration": "Duración",
   "MainIncomplete": "Incomplete",
   "MainNoWinStats": "No Win Stats",
   "MainBGG": "BGG",
