--- a/Source Code/i18n/es.json
+++ b/Source Code/i18n/es.json
@@ -99,6 +99,7 @@
   "SettingsTweetingDefaultOn": "Tweeting on by default",
   "SettingsDefaultPlayer": "Default Player",
   "SettingsDefaultLocation": "Default Location",
+  "SettingsLanguage": "Language",
   "SettingsNone": "none",
   "SettingsBlank": "blank",
   "SettingsSave": "Save Settings",
