Further Locatization updates and a mostly complete es.json file

--- a/Source Code/i18n/en.json
+++ b/Source Code/i18n/en.json
@@ -33,16 +33,20 @@
   "CalendarFri": "Fri",
   "CalendarSat": "Sat",
   "CalendarSun": "Sun",
-  "MainQuantity": "Quantity111",
-  "MainDuration": "Duration222",
+  "MainQuantity": "Quantity",
+  "MainDuration": "Duration",
   "MainIncomplete": "Incomplete",
   "MainNoWinStats": "No Win Stats",
   "MainBGG": "BGG",
   "MainVGG": "VGG",
   "MainRPG": "RPG",
   "MainRPGItem": "Item",
+  "MainPlaceholderBGG": "enter board game",
+  "MainPlaceholderVGG": "enter video game",
+  "MainPlaceholderRPG": "enter RPG",
+  "MainPlaceholderRPGItem": "enter RPG Item",
   "MainPlaceholderComments": "write a comment",
-  "MainPlaceholderGame": "enter board game",
+  "MainPlaceholderLocation": "click or type a location",
   "MainPlayers": "Players",
   "MainAll": "All",
   "MainAllGroups": "All Groups",
