--- a/Source Code/i18n/es.json
+++ b/Source Code/i18n/es.json
@@ -5,8 +5,8 @@
       "kataclysm"
     ]
   },
-  "CalendarPreviousMonth": "Previous Month",
-  "CalendarNextMonth": "Next Month",
+  "CalendarPreviousMonth": "Anterior mes",
+  "CalendarNextMonth": "Siguiente mes",
   "CalendarJanuary": "enero",
   "CalendarFebruary": "febrero",
   "CalendarMarch": "marzo",
@@ -35,214 +35,218 @@
   "CalendarSun": "dom",
   "MainQuantity": "Cantidad",
   "MainDuration": "Duración",
-  "MainIncomplete": "Incomplete",
-  "MainNoWinStats": "No Win Stats",
+  "MainIncomplete": "Incompleta",
+  "MainNoWinStats": "No competitiva",
   "MainBGG": "BGG",
   "MainVGG": "VGG",
   "MainRPG": "RPG",
-  "MainRPGItem": "Item",
-  "MainPlaceholderComments": "write a comment",
-  "MainPlaceholderGame": "enter board game",
-  "MainPlayers": "Players",
-  "MainAll": "All",
-  "MainAllGroups": "All Groups",
-  "MainOther": "Other",
-  "MainName": "Name",
-  "MainUsername": "Username",
-  "MainTeamColor": "Team\nColor",
-  "MainStartPosition": "Start\nPos",
-  "MainScore": "Score",
-  "MainRating": "Rate",
-  "MainWin": "Win",
-  "MainNew": "New",
-  "MainButtonSubmit": "Submit",
-  "MainButtonSubmitDuplicate": "Submit & Duplicate",
-  "MainButtonSubmitEdits": "Submit Edits",
-  "MainTweetThis": "Tweet This",
-  "SettingsHeader": "Settings",
+  "MainRPGItem": "Objeto",
+  "MainPlaceholderBGG": "Escribe un juego",
+  "MainPlaceholderVGG": "enter video game",
+  "MainPlaceholderRPG": "enter RPG",
+  "MainPlaceholderRPGItem": "enter RPG Item",
+  "MainPlaceholderComments": "Escribe un comentario",
+  "MainPlaceholderLocation": "click or type a location",
+  "MainPlayers": "Jugadores",
+  "MainAll": "Todos",
+  "MainAllGroups": "Todos los grupos",
+  "MainOther": "Otro",
+  "MainName": "Nombre",
+  "MainUsername": "Usuario",
+  "MainTeamColor": "Equipo\nColor",
+  "MainStartPosition": "Posición\nInicial",
+  "MainScore": "Puntos",
+  "MainRating": "Gusto",
+  "MainWin": "Ganador",
+  "MainNew": "Nuevo",
+  "MainButtonSubmit": "Enviar",
+  "MainButtonSubmitDuplicate": "Enviar & Duplicar",
+  "MainButtonSubmitEdits": "Enviar Mdificación",
+  "MainTweetThis": "Twitear",
+  "SettingsHeader": "Ajustes",
   "SettingsArea": "Area",
   "SettingsVisible": "Visible",
-  "SettingsReset": "Reset",
-  "SettingsDate": "Date",
-  "SettingsLocation": "Location",
-  "SettingsSavedLocationList": "Saved Location List",
-  "SettingsQuantity": "Quantity",
-  "SettingsDuration": "Duration",
-  "SettingsIncomplete": "Incomplete",
-  "SettingsNoWinStats": "No Win Stats",
-  "SettingsTweetThis": "Tweet This",
-  "SettingsComments": "Comments",
-  "SettingsGame": "Game",
-  "SettingsDomainButtons": "Domain Buttons",
-  "SettingsSavedPlayerNames": "Saved Player Names",
-  "SettingsEnableFilters": "Enable Filters",
-  "SettingsEnableGroups": "Enable Groups",
-  "SettingsPlayerColumns": "Player Columns",
-  "SettingsName": "Name",
-  "SettingsUsername": "Username",
-  "SettingsTeamColor": "Team / Color",
-  "SettingsStartPosition": "Starting Position",
-  "SettingsScore": "Score",
-  "SettingsRating": "Rating",
-  "SettingsWin": "Win",
-  "SettingsNew": "New",
-  "SettingsOtherStuff": "Other Stuff",
-  "SettingsPopUpText": "Pop-Up Text",
-  "SettingsSummarySentence": "Summary Sentence",
-  "SettingsNorrenWinComments": "Noreen's Win Comments",
-  "SettingsSortPlayersAlpha": "Sort Players: Alpha",
-  "SettingsSortGroupsAlpha": "Sort Groups: Alpha",
-  "SettingsExpansionsLogDetails": "Log Details with Expansions",
-  "SettingsExpansionsListInComments": "List Expansions in Comments",
-  "SettingsExpansionsNoWinStats": "Exclude Expansions from Win Stats",
-  "SettingsExpansionsLinkToParent": "Link Expansions to Parent Play",
-  "SettingsTweetingDefaultOn": "Tweeting on by default",
-  "SettingsDefaultPlayer": "Default Player",
-  "SettingsDefaultLocation": "Default Location",
-  "SettingsLanguage": "Language",
-  "SettingsNone": "none",
-  "SettingsBlank": "blank",
-  "SettingsSave": "Save Settings",
-  "FavoritesHeader": "Favorites",
-  "FavoritesYouHaveFavorites": "You have $1 Favorites",
-  "PlayersHeader": "Saved Players",
-  "PlayersTabPlayers": "Players",
-  "PlayersName": "Name",
-  "PlayersUsername": "Username",
+  "SettingsReset": "Resetear",
+  "SettingsDate": "Fecha",
+  "SettingsLocation": "Lugar",
+  "SettingsSavedLocationList": "Lugares guardados",
+  "SettingsQuantity": "Cantidad",
+  "SettingsDuration": "Duración",
+  "SettingsIncomplete": "Incompleta",
+  "SettingsNoWinStats": "No competitiva",
+  "SettingsTweetThis": "Twitear",
+  "SettingsComments": "Comentarios",
+  "SettingsGame": "Juego",
+  "SettingsDomainButtons": "Botones de dominio",
+  "SettingsSavedPlayerNames": "Jugadores guardados",
+  "SettingsEnableFilters": "Habilitar filtros",
+  "SettingsEnableGroups": "Habilitar grupos",
+  "SettingsPlayerColumns": "Columnas",
+  "SettingsName": "Nombre",
+  "SettingsUsername": "Nombre de usuario",
+  "SettingsTeamColor": "Equpo / Color",
+  "SettingsStartPosition": "Posición inicial",
+  "SettingsScore": "Puntos",
+  "SettingsRating": "Gusto",
+  "SettingsWin": "Ganador",
+  "SettingsNew": "Nuevo",
+  "SettingsOtherStuff": "Otras cosas",
+  "SettingsPopUpText": "Texto de Pop-Ups",
+  "SettingsSummarySentence": "Frase resumen",
+  "SettingsNorrenWinComments": "Comentarios de Noreen",
+  "SettingsSortPlayersAlpha": "Ordenar jugadores: Alpha",
+  "SettingsSortGroupsAlpha": "Ordenar grupos: Alpha",
+  "SettingsExpansionsLogDetails": "Apuntar detalles con expansiones",
+  "SettingsExpansionsListInComments": "Apuntar expansiones en comentario",
+  "SettingsExpansionsNoWinStats": "Apuntar expansiones como No competitivas",
+  "SettingsExpansionsLinkToParent": "Enlazar expansiones a la partida del base",
+  "SettingsTweetingDefaultOn": "Twitear por defecto",
+  "SettingsDefaultPlayer": "Jugador por defecto",
+  "SettingsDefaultLocation": "Lugar por defecto",
+  "SettingsLanguage": "Idioma",
+  "SettingsNone": "ninguna",
+  "SettingsBlank": "vacío",
+  "SettingsSave": "Guardar ajustes",
+  "FavoritesHeader": "Favoritos",
+  "FavoritesYouHaveFavorites": "Tienes $1 favoritos",
+  "PlayersHeader": "Jugadores guardados",
+  "PlayersTabPlayers": "Jugadores",
+  "PlayersName": "Nombre",
+  "PlayersUsername": "Usuario",
   "PlayersColor": "Color",
-  "PlayersButtonSave": "Save",
-  "PlayersButtonNew": "New",
-  "PlayersTabFilters": "Filters",
-  "PlayersButtonSaveFilters": "Save Filters",
-  "PlayersPlaceholderAddFilter": "Add a new Filter",
-  "PlayersTabGroups": "Groups",
-  "PlayersButtonSaveGroups": "Save Groups",
-  "PlayersPlaceholderAddGroup": "Add a new Group",
-  "LocationsHeader": "Saved Locations",
-  "LocationsButtonSave": "Save",
-  "LocationsButtonNew": "New",
-  "ExpansionsHeader": "Expansion Logging",
-  "ExpansionsTabExpansions": "Expansions",
-  "ExpansionsTabFamily": "Family",
-  "ExpansionsQuantity": "Expansion Play Quantity",
+  "PlayersButtonSave": "Guardar",
+  "PlayersButtonNew": "Nuevo",
+  "PlayersTabFilters": "Filtros",
+  "PlayersButtonSaveFilters": "Guardar filtros",
+  "PlayersPlaceholderAddFilter": "Añadir nuevo filtro",
+  "PlayersTabGroups": "Grupos",
+  "PlayersButtonSaveGroups": "Guardar grupos",
+  "PlayersPlaceholderAddGroup": "Añadir nuevo grupo",
+  "LocationsHeader": "Lugares guardados",
+  "LocationsButtonSave": "Guardar",
+  "LocationsButtonNew": "Nuevo",
+  "ExpansionsHeader": "¿Expansiones?",
+  "ExpansionsTabExpansions": "Expansiones",
+  "ExpansionsTabFamily": "Familia",
+  "ExpansionsQuantity": "Cantidad de partidas de la expansión",
   "ExpansionsButtonOkay": "OK",
-  "ExpansionsButtonClear": "Clear Selection",
-  "PlaysHeader": "Logged Plays",
-  "PlaysGetNext": "Get next",
-  "PlaysGetGame": "Get",
-  "PlaysGetRecent": "Get Recent",
-  "PlaysLoaded": "Loaded $1 of $2",
-  "PlaysLoadNext": "Load next",
-  "PlaysShowing": "Showing",
-  "PlaysFilterAddFilter": "Add a Filter",
-  "PlaysFilterGame": "Game",
-  "PlaysFilterPlayer": "Player",
-  "PlaysFilterUsername": "Username",
-  "PlaysFilterLocation": "Location",
-  "PlaysFilterDateRange": "Date Range",
-  "PlaysFilterDateRangeBegin": "Begin",
-  "PlaysFilterDateRangeEnd": "End",
-  "PlaysFilterWinner": "Winner",
-  "PlaysFilterNew": "New",
-  "PlaysFilterScore": "Score",
-  "PlaysFilterDuration": "Duration",
-  "PlaysFilterPlayerCount": "Player Count",
-  "PlaysFilterGameType": "Type of Game",
-  "PlaysFilterGameTypeType": "Type",
-  "PlaysFilterGameTypeBoard": "Board",
-  "PlaysFilterGameTypeVideo": "Video",
+  "ExpansionsButtonClear": "Borrar selección",
+  "PlaysHeader": "Partidas apuntadas",
+  "PlaysGetNext": "Cargar siguiente",
+  "PlaysGetGame": "Carcar",
+  "PlaysGetRecent": "Cargar recientes",
+  "PlaysLoaded": "Cargadas $1 de $2",
+  "PlaysLoadNext": "Cargar siguente",
+  "PlaysShowing": "Mostrando",
+  "PlaysFilterAddFilter": "Añadir a filtro",
+  "PlaysFilterGame": "Juego",
+  "PlaysFilterPlayer": "Jugador",
+  "PlaysFilterUsername": "Usuario",
+  "PlaysFilterLocation": "Lugar",
+  "PlaysFilterDateRange": "Rango de fechas",
+  "PlaysFilterDateRangeBegin": "Inicio",
+  "PlaysFilterDateRangeEnd": "Fin",
+  "PlaysFilterWinner": "Ganador",
+  "PlaysFilterNew": "Nuevo",
+  "PlaysFilterScore": "Puntos",
+  "PlaysFilterDuration": "Duración",
+  "PlaysFilterPlayerCount": "Partidas",
+  "PlaysFilterGameType": "Tipo de juego",
+  "PlaysFilterGameTypeType": "Tipo",
+  "PlaysFilterGameTypeBoard": "Tablero",
+  "PlaysFilterGameTypeVideo": "Videojuego",
   "PlaysFilterGameTypeRPG": "RPG",
-  "PlaysFilterComments": "Comments",
-  "PlaysFilterExpansions": "Expansions",
-  "PlaysFilterNoWinStats": "No-Win-Stats",
-  "PlaysFilterIncomplete": "Incomplete",
-  "PlaysFilterButtonGo": "go",
-  "PlaysFilterValueExactly": "Exactly",
-  "PlaysFilterValueLessThan": "Less Than",
-  "PlaysFilterValueGreaterThan": "Greater Than",
-  "PlaysFilterValueContains": "Contains",
-  "PlaysFilterValueExclude": "Exclude",
-  "PlaysFilterValueOnly": "Only",
-  "PlaysButtonCopySelected": "Copy Selected Plays",
-  "StatsStat": "Stat",
-  "StatsWins": "Wins",
-  "StatsWinsByGame": "Wins by Game",
-  "StatsBeginnersLuck": "Beginner's Luck",
-  "StatsGameList": "Game List",
-  "StatsGameDetails": "Game Details",
-  "StatsLocations": "Locations",
-  "StatsDaysSince": "Days Since...",
-  "StatsOptionIncludeZeros": "Include Zeros",
-  "StatsColumnPlayer": "Player",
-  "StatsColumnPlays": "Plays",
-  "StatsColumnWins": "Wins",
-  "StatsColumnAverage": "Average",
-  "StatsColumnGame": "Game",
-  "StatsColumnNewWon": "New & Won",
-  "StatsColumnStat": "Stat",
-  "StatsColumnAvg": "Avg",
-  "StatsColumnLow": "Low",
-  "StatsColumnHigh": "High",
-  "StatsColumnAvgPoints": "AvgPts",
-  "StatsColumnAvgWins": "AvgWins",
-  "StatsColumnLocation": "Location",
-  "StatsColumnDays": "Days",
-  "PopupButtonSubmit": "Submit and Clear All Fields",
-  "PopupButtonSubmitDuplicate": "Submit but Keep Player Data Onscreen",
-  "PopupButtonFavorites": "Choose from your Favorites list",
-  "PopupButtonAddFavorite": "Add to Favorites",
-  "PopupButtonAddFavorite2": "Add currently selected Game, Location, Players, and Expansions to Favorites",
-  "PopupButtonExpansions": "Log an expansion",
-  "PopupTextSettingsReset": "Check these items to clear their values when you press <b>Submit & Duplicate</b>",
-  "PopupFieldSettingsResetDate": "Date will also reset when clicking <b>Submit</b>",
-  "PopupButtonShutPane": "Shut this Drawer",
-  "PopupButtonResetAllSettings": "Reset all settings to default.  Close and re-open SPLU after clicking this.",
-  "PopupButtonEditPlayers": "Edit Players",
-  "PopupButtonEditLocations": "Edit Locations",
-  "PopupButtonSaveLocation": "Save This Location",
-  "PopupButtonViewPlays": "View/Edit Play History",
-  "PopupButtonResetForm": "Reset All Fields",
-  "PopupButtonDeletePlay": "Delete this Play",
-  "PopupTabMultiCopy": "Enter Multi-Copy Mode",
-  "PopupButtonCopyPlays": "Copy the selected plays to your own plays.",
-  "PopupButtonSelectAllPlays": "Select All Plays",
-  "PopupButtonDeselectAllPlays": "Deselect All Plays",
-  "StatusCopying": "Copying $1 of $2",
-  "StatusCopied": "Copied $1 of $2",
-  "StatusFinished": "Finished",
-  "StatusLogged": "Logged",
-  "StatusThinking": "Thinking...",
-  "StatusErrorCode": "Error Code",
-  "StatusSaved": "Saved",
-  "StatusUpdatingVersion": "Updating Version...",
-  "StatusVersionUpdatedTo": "Version Updated to",
-  "StatusAdded": "Added",
-  "StatusDeleted": "Deleted",
-  "StatusSettingsReset": "Settings Reset. Please close SPLU.",
-  "StatusSearching": "Searching...",
-  "StatusDeleting": "Deleting...",
-  "StatusPlayDeleted": "Play Deleted.",
-  "StatusViewYourPlays": "View you plays",
-  "StatusErrorOccured": "An Error Occured",
-  "StatusTimedOutTryAgain": "Timed Out. Try Again.",
-  "StatusHitASnag": "Hit a snag.",
-  "StatusKeepGoingQuestion": "Keep Going?",
-  "StatusNoGameSelected": "Hey! You didn't choose a game.",
-  "StatusSaving": "Saving...",
-  "StatusErrorTryAgain": "Error. Try Again.",
-  "StatusInvalidDate": "Invalid Date",
-  "StatusFetchingPageOf": "Fetching Page $1 of ??",
-  "StatusFetchingPlaysFromDate": "Fetching plays from",
-  "StatusNoPlaysFound": "No Plays Found.",
-  "StatusLoadMore": "load more...",
-  "StatusNoExpansionsFound": "No Expansions Found.",
-  "StatusLoadingExpansions": "Loading Expansions...",
-  "StatusExpansionsSelected": "Expansions Selected",
-  "StatusNoFamilyItemsFound": "No Family Items Found.",
-  "StatusLoadingFamilyItems": "Loading Family Items...",
-  "StatusWaitingForExpansionsToBeLogged": "Waiting for $1 expansions to be logged.",
-  "StatusYouHaveFavorites": "You have $1 Favorites.",
-  "StatusUnsavedGroupsFilters": "You have unsaved groups and/or filters.",
-  "StatusUnsavedGroups": "You have unsaved groups.",
-  "StatusUnsavedFilters": "You have unsaved filters."
+  "PlaysFilterComments": "Comentarios",
+  "PlaysFilterExpansions": "Expansiones",
+  "PlaysFilterNoWinStats": "No competitivas",
+  "PlaysFilterIncomplete": "Incompleta",
+  "PlaysFilterButtonGo": "Ir",
+  "PlaysFilterValueExactly": "Exactamente",
+  "PlaysFilterValueLessThan": "Menos de",
+  "PlaysFilterValueGreaterThan": "Mayor que",
+  "PlaysFilterValueContains": "Contiene",
+  "PlaysFilterValueExclude": "Excluir",
+  "PlaysFilterValueOnly": "Solo",
+  "PlaysButtonCopySelected": "Copiar partidas seleccionadas",
+  "StatsStat": "Estad.",
+  "StatsWins": "Victorias",
+  "StatsWinsByGame": "Victorias por juego",
+  "StatsBeginnersLuck": "Suerte del principiante",
+  "StatsGameList": "Lista de juegos",
+  "StatsGameDetails": "Detalles de juego",
+  "StatsLocations": "Lugares",
+  "StatsDaysSince": "Días desde...",
+  "StatsOptionIncludeZeros": "Incluir ceros",
+  "StatsColumnPlayer": "Jugador",
+  "StatsColumnPlays": "Partidas",
+  "StatsColumnWins": "Victorias",
+  "StatsColumnAverage": "Media",
+  "StatsColumnGame": "Juego",
+  "StatsColumnNewWon": "Victoria a la primera",
+  "StatsColumnStat": "Estad.",
+  "StatsColumnAvg": "Media",
+  "StatsColumnLow": "Bajo",
+  "StatsColumnHigh": "Alto",
+  "StatsColumnAvgPoints": "x̄Pts",
+  "StatsColumnAvgWins": "x̄Victorias",
+  "StatsColumnLocation": "Lugar",
+  "StatsColumnDays": "Días",
+  "PopupButtonSubmit": "Enviar y limpiar todos los campos",
+  "PopupButtonSubmitDuplicate": "Enviar dejando datos precargados",
+  "PopupButtonFavorites": "Elege desde tu lista de favoritos",
+  "PopupButtonAddFavorite": "Añadir a favoritos",
+  "PopupButtonAddFavorite2": "Añadir juego, lugar, jugadores y expansiones a favoritos",
+  "PopupButtonExpansions": "Apuntar una expansión",
+  "PopupTextSettingsReset": "Selecciona lo que quieres que se limpie al <b>Enviar & Duplicar</b>",
+  "PopupFieldSettingsResetDate": "La fecha también se limpieará al <b>Enviar</b>",
+  "PopupButtonShutPane": "Cierra esta caja",
+  "PopupButtonResetAllSettings": "Resetea todos los ajustes por defecto.  Cierra y abre SPLU después de darle aquí.",
+  "PopupButtonEditPlayers": "Editar jugadores",
+  "PopupButtonEditLocations": "Editar lugares",
+  "PopupButtonSaveLocation": "Guardar este lugar",
+  "PopupButtonViewPlays": "Ver/Editar histprial de partidas",
+  "PopupButtonResetForm": "Resetear todos los campos",
+  "PopupButtonDeletePlay": "Borrar esta partida",
+  "PopupTabMultiCopy": "Activar modo multicopia",
+  "PopupButtonCopyPlays": "Copiar las partidas seleccionadas a mis partidas.",
+  "PopupButtonSelectAllPlays": "Seleccionar todas",
+  "PopupButtonDeselectAllPlays": "Ninguna seleccionada",
+  "StatusCopying": "Copiando $1 de $2",
+  "StatusCopied": "Copiada $1 de $2",
+  "StatusFinished": "Finalizado",
+  "StatusLogged": "Apuntada",
+  "StatusThinking": "Pensando...",
+  "StatusErrorCode": "Código de error",
+  "StatusSaved": "Salvado",
+  "StatusUpdatingVersion": "Actualizando versión...",
+  "StatusVersionUpdatedTo": "Versión actualizada a",
+  "StatusAdded": "Añadida",
+  "StatusDeleted": "Borrada",
+  "StatusSettingsReset": "Ajustes reseteados. Por favor, cierra SPLU.",
+  "StatusSearching": "Buscando...",
+  "StatusDeleting": "Borrando...",
+  "StatusPlayDeleted": "Partida borrada.",
+  "StatusViewYourPlays": "Ver mis partidas",
+  "StatusErrorOccured": "Ha ocurrido un error",
+  "StatusTimedOutTryAgain": "Tiempo agotado. Reintenta.",
+  "StatusHitASnag": "Ha ocurrido un imprevisto.",
+  "StatusKeepGoingQuestion": "¿Seguir?",
+  "StatusNoGameSelected": "Hey! No has elegido juego.",
+  "StatusSaving": "Salvando...",
+  "StatusErrorTryAgain": "Error. Reintenta.",
+  "StatusInvalidDate": "Fecha no válida",
+  "StatusFetchingPageOf": "Recuperando página $1 de ??",
+  "StatusFetchingPlaysFromDate": "Reguperando partidas de",
+  "StatusNoPlaysFound": "No encontradas partidas.",
+  "StatusLoadMore": "cargar más...",
+  "StatusNoExpansionsFound": "No encontradas expansiones.",
+  "StatusLoadingExpansions": "Cargando expansiones...",
+  "StatusExpansionsSelected": "Expansiones seleccionadas",
+  "StatusNoFamilyItemsFound": "No encontrados otros juegos de su familia.",
+  "StatusLoadingFamilyItems": "Cargando juegos de la familia...",
+  "StatusWaitingForExpansionsToBeLogged": "Apuntando partidas de expansión: $1 ...",
+  "StatusYouHaveFavorites": "Tienes $1 favoritos.",
+  "StatusUnsavedGroupsFilters": "Hay grupos y/o filtros sin salvar.",
+  "StatusUnsavedGroups": "Hay grupos sin salvar.",
+  "StatusUnsavedFilters": "Hay filtros sin salvar."
 }
