--- a/Source Code/i18n/en.json
+++ b/Source Code/i18n/en.json
@@ -132,8 +132,9 @@
   "ExpansionsButtonOkay": "OK",
   "ExpansionsButtonClear": "Clear Selection",
   "PlaysHeader": "Logged Plays",
+  "PlaysGetAll": "Get all",
   "PlaysGetNext": "Get next",
-  "PlaysGetGame": "Get",
+  "PlaysGetGame": "Get Selected Game",
   "PlaysGetRecent": "Get Recent",
   "PlaysLoaded": "Loaded $1 of $2",
   "PlaysLoadNext": "Load next",
