--- a/Source Code/i18n/es.json
+++ b/Source Code/i18n/es.json
@@ -133,7 +133,8 @@
   "ExpansionsButtonClear": "Borrar selección",
   "PlaysHeader": "Partidas apuntadas",
   "PlaysGetNext": "Cargar siguiente",
-  "PlaysGetGame": "Carcar",
+  "PlaysGetAll": "Get all",
+  "PlaysGetGame": "Get Selected Game",
   "PlaysGetRecent": "Cargar recientes",
   "PlaysLoaded": "Cargadas $1 de $2",
   "PlaysLoadNext": "Cargar siguente",
