--- a/Source Code/i18n/en.json
+++ b/Source Code/i18n/en.json
@@ -212,6 +212,7 @@
   "PopupButtonCopyPlays": "Copy the selected plays to your own plays.",
   "PopupButtonSelectAllPlays": "Select All Plays",
   "PopupButtonDeselectAllPlays": "Deselect All Plays",
+  "PopupAlertDeletePlayOK": "Press OK to delete this play",
   "StatusCopying": "Copying $1 of $2",
   "StatusCopied": "Copied $1 of $2",
   "StatusFinished": "Finished",
@@ -228,7 +229,7 @@
   "StatusDeleting": "Deleting...",
   "StatusPlayDeleted": "Play Deleted.",
   "StatusViewYourPlays": "View you plays",
-  "StatusErrorOccured": "An Error Occured",
+  "StatusErrorOccurred": "An Error Occurred",
   "StatusTimedOutTryAgain": "Timed Out. Try Again.",
   "StatusHitASnag": "Hit a snag.",
   "StatusKeepGoingQuestion": "Keep Going?",
