--- a/Source Code/i18n/es.json
+++ b/Source Code/i18n/es.json
@@ -212,6 +212,7 @@
   "PopupButtonCopyPlays": "Copiar las partidas seleccionadas a mis partidas.",
   "PopupButtonSelectAllPlays": "Seleccionar todas",
   "PopupButtonDeselectAllPlays": "Ninguna seleccionada",
+  "PopupAlertDeletePlayOK": "Press OK to delete this play",
   "StatusCopying": "Copiando $1 de $2",
   "StatusCopied": "Copiada $1 de $2",
   "StatusFinished": "Finalizado",
@@ -228,7 +229,7 @@
   "StatusDeleting": "Borrando...",
   "StatusPlayDeleted": "Partida borrada.",
   "StatusViewYourPlays": "Ver mis partidas",
-  "StatusErrorOccured": "Ha ocurrido un error",
+  "StatusErrorOccurred": "Ha ocurrido un error",
   "StatusTimedOutTryAgain": "Tiempo agotado. Reintenta.",
   "StatusHitASnag": "Ha ocurrido un imprevisto.",
   "StatusKeepGoingQuestion": "¿Seguir?",
