--- a/Source Code/i18n/en.json
+++ b/Source Code/i18n/en.json
@@ -193,6 +193,10 @@
   "StatsColumnAvgWins": "AvgWins",
   "StatsColumnLocation": "Location",
   "StatsColumnDays": "Days",
+  "StatsRowsAllScores": "All Scores",
+  "StatsRowsWinningScores": "Winning Scores",
+  "StatsRowsDuration": "Duration",
+  "StatsRowsSpread": "Spread",
   "PopupButtonSubmit": "Submit and Clear All Fields",
   "PopupButtonSubmitDuplicate": "Submit but Keep Player Data Onscreen",
   "PopupButtonFavorites": "Choose from your Favorites list",
@@ -227,6 +231,7 @@
   "StatusDeleted": "Deleted",
   "StatusSettingsReset": "Settings Reset. Please close SPLU.",
   "StatusSearching": "Searching...",
+  "StatusNoResults": "No Results.",
   "StatusDeleting": "Deleting...",
   "StatusPlayDeleted": "Play Deleted.",
   "StatusViewYourPlays": "View you plays",
