--- a/Source Code/i18n/es.json
+++ b/Source Code/i18n/es.json
@@ -44,11 +44,11 @@
   "MainRPG": "RPG",
   "MainRPGItem": "Objeto",
   "MainPlaceholderBGG": "Escribe un juego",
-  "MainPlaceholderVGG": "enter video game",
-  "MainPlaceholderRPG": "enter RPG",
-  "MainPlaceholderRPGItem": "enter RPG Item",
+  "MainPlaceholderVGG": "Escribe un videojuego",
+  "MainPlaceholderRPG": "Escribe un RPG",
+  "MainPlaceholderRPGItem": "Escribe un RPG",
   "MainPlaceholderComments": "Escribe un comentario",
-  "MainPlaceholderLocation": "click or type a location",
+  "MainPlaceholderLocation": "Escribe lugar o pincha en uno guardado",
   "MainPlayers": "Jugadores",
   "MainAll": "Todos",
   "MainAllGroups": "Todos los grupos",
@@ -186,7 +186,7 @@
   "StatsColumnAverage": "Media",
   "StatsColumnGame": "Juego",
   "StatsColumnNewWon": "Victoria a la primera",
-  "StatsColumnStat": "Estad.",
+  "StatsColumnStat": "Estad",
   "StatsColumnAvg": "Media",
   "StatsColumnLow": "Bajo",
   "StatsColumnHigh": "Alto",
@@ -194,6 +194,10 @@
   "StatsColumnAvgWins": "x̄Victorias",
   "StatsColumnLocation": "Lugar",
   "StatsColumnDays": "Días",
+  "StatsRowsAllScores": "All Scores",
+  "StatsRowsWinningScores": "Winning Scores",
+  "StatsRowsDuration": "Duration",
+  "StatsRowsSpread": "Spread",
   "PopupButtonSubmit": "Enviar y limpiar todos los campos",
   "PopupButtonSubmitDuplicate": "Enviar dejando datos precargados",
   "PopupButtonFavorites": "Elege desde tu lista de favoritos",
@@ -228,6 +232,7 @@
   "StatusDeleted": "Borrada",
   "StatusSettingsReset": "Ajustes reseteados. Por favor, cierra SPLU.",
   "StatusSearching": "Buscando...",
+  "StatusNoResults": "No Results.",
   "StatusDeleting": "Borrando...",
   "StatusPlayDeleted": "Partida borrada.",
   "StatusViewYourPlays": "Ver mis partidas",
