Trying BRs in teh en.json

--- a/Source Code/i18n/en.json
+++ b/Source Code/i18n/en.json
@@ -54,8 +54,8 @@
   "MainOther": "Other",
   "MainName": "Name",
   "MainUsername": "Username",
-  "MainTeamColor": "Team\nColor",
-  "MainStartPosition": "Start\nPos",
+  "MainTeamColor": "Team<br/>Color",
+  "MainStartPosition": "Start<br/>Pos",
   "MainScore": "Score",
   "MainRating": "Rate",
   "MainWin": "Win",
