Switching to BRs in es.json and fixing the "start start position"

--- a/Source Code/i18n/es.json
+++ b/Source Code/i18n/es.json
@@ -55,8 +55,8 @@
   "MainOther": "Otro",
   "MainName": "Nombre",
   "MainUsername": "Usuario",
-  "MainTeamColor": "Equipo\nColor",
-  "MainStartPosition": "Posición\nInicial",
+  "MainTeamColor": "Equipo<br/>Color",
+  "MainStartPosition": "Posición<br/>Inicial",
   "MainScore": "Puntos",
   "MainRating": "Gusto",
   "MainWin": "Ganador",
