Error correction and new strings translated.

--- a/Source Code/i18n/es.json
+++ b/Source Code/i18n/es.json
@@ -34,7 +34,7 @@
   "CalendarFri": "vie",
   "CalendarSat": "sáb",
   "CalendarSun": "dom",
-  "CalendarInvalidDate": "Invalid Date",
+  "CalendarInvalidDate": "Fecha no válida",
   "MainQuantity": "Cantidad",
   "MainDuration": "Duración",
   "MainIncomplete": "Incompleta",
@@ -55,15 +55,15 @@
   "MainOther": "Otro",
   "MainName": "Nombre",
   "MainUsername": "Usuario",
-  "MainTeamColor": "Equipo<br/>Color",
+  "MainTeamColor": "Equipo/<br/>Color",
   "MainStartPosition": "Posición<br/>Inicial",
   "MainScore": "Puntos",
   "MainRating": "Gusto",
   "MainWin": "Ganador",
   "MainNew": "Nuevo",
-  "MainButtonSubmit": "Enviar",
-  "MainButtonSubmitDuplicate": "Enviar & Duplicar",
-  "MainButtonSubmitEdits": "Enviar Mdificación",
+  "MainButtonSubmit": "Aceptar",
+  "MainButtonSubmitDuplicate": "Aceptar y duplicar",
+  "MainButtonSubmitEdits": "Aceptar modificación",
   "MainTweetThis": "Twitear",
   "SettingsHeader": "Ajustes",
   "SettingsArea": "Area",
@@ -86,7 +86,7 @@
   "SettingsPlayerColumns": "Columnas",
   "SettingsName": "Nombre",
   "SettingsUsername": "Nombre de usuario",
-  "SettingsTeamColor": "Equpo / Color",
+  "SettingsTeamColor": "Equipo / Color",
   "SettingsStartPosition": "Posición inicial",
   "SettingsScore": "Puntos",
   "SettingsRating": "Gusto",
@@ -96,8 +96,8 @@
   "SettingsPopUpText": "Texto de Pop-Ups",
   "SettingsSummarySentence": "Frase resumen",
   "SettingsNoreenWinComments": "Comentarios de Noreen",
-  "SettingsSortPlayersAlpha": "Ordenar jugadores: Alpha",
-  "SettingsSortGroupsAlpha": "Ordenar grupos: Alpha",
+  "SettingsSortPlayersAlpha": "Ordenar jugadores (Alpha)",
+  "SettingsSortGroupsAlpha": "Ordenar grupos (Alpha)",
   "SettingsExpansionsLogDetails": "Apuntar detalles con expansiones",
   "SettingsExpansionsListInComments": "Apuntar expansiones en comentario",
   "SettingsExpansionsNoWinStats": "Apuntar expansiones como No competitivas",
@@ -135,8 +135,8 @@
   "ExpansionsButtonClear": "Borrar selección",
   "PlaysHeader": "Partidas apuntadas",
   "PlaysGetNext": "Cargar siguiente",
-  "PlaysGetAll": "Get all",
-  "PlaysGetGame": "Get Selected Game",
+  "PlaysGetAll": "Cargar todas",
+  "PlaysGetGame": "Cargar juego elegido",
   "PlaysGetRecent": "Cargar recientes",
   "PlaysLoaded": "Cargadas $1 de $2",
   "PlaysLoadNext": "Cargar siguente",
@@ -166,12 +166,12 @@
   "PlaysFilterButtonGo": "Ir",
   "PlaysFilterValueExactly": "Exactamente",
   "PlaysFilterValueLessThan": "Menos de",
-  "PlaysFilterValueGreaterThan": "Mayor que",
+  "PlaysFilterValueGreaterThan": "Más de",
   "PlaysFilterValueContains": "Contiene",
   "PlaysFilterValueExclude": "Excluir",
   "PlaysFilterValueOnly": "Solo",
   "PlaysButtonCopySelected": "Copiar partidas seleccionadas",
-  "StatsStat": "Estad.",
+  "StatsStat": "Estadistica",
   "StatsWins": "Victorias",
   "StatsWinsByGame": "Victorias por juego",
   "StatsBeginnersLuck": "Suerte del principiante",
@@ -188,37 +188,37 @@
   "StatsColumnNewWon": "Victoria a la primera",
   "StatsColumnStat": "Estad",
   "StatsColumnAvg": "Media",
-  "StatsColumnLow": "Bajo",
-  "StatsColumnHigh": "Alto",
-  "StatsColumnAvgPoints": "x̄Pts",
-  "StatsColumnAvgWins": "x̄Victorias",
+  "StatsColumnLow": "Menor",
+  "StatsColumnHigh": "Mayor",
+  "StatsColumnAvgPoints": "x&#772;Pts",
+  "StatsColumnAvgWins": "x&#772;Victorias",
   "StatsColumnLocation": "Lugar",
   "StatsColumnDays": "Días",
-  "StatsRowsAllScores": "All Scores",
-  "StatsRowsWinningScores": "Winning Scores",
-  "StatsRowsDuration": "Duration",
-  "StatsRowsSpread": "Spread",
+  "StatsRowsAllScores": "Todas las puntuaciones",
+  "StatsRowsWinningScores": "Puntuaciones ganadoras",
+  "StatsRowsDuration": "Duración",
+  "StatsRowsSpread": "Di´fusión",
   "PopupButtonSubmit": "Enviar y limpiar todos los campos",
   "PopupButtonSubmitDuplicate": "Enviar dejando datos precargados",
-  "PopupButtonFavorites": "Elege desde tu lista de favoritos",
+  "PopupButtonFavorites": "Elige desde tu lista de favoritos",
   "PopupButtonAddFavorite": "Añadir a favoritos",
   "PopupButtonAddFavorite2": "Añadir juego, lugar, jugadores y expansiones a favoritos",
   "PopupButtonExpansions": "Apuntar una expansión",
   "PopupTextSettingsReset": "Selecciona lo que quieres que se limpie al <b>Enviar & Duplicar</b>",
-  "PopupFieldSettingsResetDate": "La fecha también se limpieará al <b>Enviar</b>",
+  "PopupFieldSettingsResetDate": "La fecha también se limpiará al <b>Enviar</b>",
   "PopupButtonShutPane": "Cierra esta caja",
   "PopupButtonResetAllSettings": "Resetea todos los ajustes por defecto.  Cierra y abre SPLU después de darle aquí.",
   "PopupButtonEditPlayers": "Editar jugadores",
   "PopupButtonEditLocations": "Editar lugares",
   "PopupButtonSaveLocation": "Guardar este lugar",
-  "PopupButtonViewPlays": "Ver/Editar histprial de partidas",
+  "PopupButtonViewPlays": "Ver/Editar historial de partidas",
   "PopupButtonResetForm": "Resetear todos los campos",
   "PopupButtonDeletePlay": "Borrar esta partida",
   "PopupTabMultiCopy": "Activar modo multicopia",
   "PopupButtonCopyPlays": "Copiar las partidas seleccionadas a mis partidas.",
   "PopupButtonSelectAllPlays": "Seleccionar todas",
   "PopupButtonDeselectAllPlays": "Ninguna seleccionada",
-  "PopupAlertDeletePlayOK": "Press OK to delete this play",
+  "PopupAlertDeletePlayOK": "¿Seguro que quieres borrar esta partida?",
   "StatusCopying": "Copiando $1 de $2",
   "StatusCopied": "Copiada $1 de $2",
   "StatusFinished": "Finalizado",
@@ -232,7 +232,7 @@
   "StatusDeleted": "Borrada",
   "StatusSettingsReset": "Ajustes reseteados. Por favor, cierra SPLU.",
   "StatusSearching": "Buscando...",
-  "StatusNoResults": "No Results.",
+  "StatusNoResults": "Sin resultados.",
   "StatusDeleting": "Borrando...",
   "StatusPlayDeleted": "Partida borrada.",
   "StatusViewYourPlays": "Ver mis partidas",
@@ -240,7 +240,7 @@
   "StatusTimedOutTryAgain": "Tiempo agotado. Reintenta.",
   "StatusHitASnag": "Ha ocurrido un imprevisto.",
   "StatusKeepGoingQuestion": "¿Seguir?",
-  "StatusNoGameSelected": "Hey! No has elegido juego.",
+  "StatusNoGameSelected": "¡Hey! No has elegido juego.",
   "StatusSaving": "Salvando...",
   "StatusErrorTryAgain": "Error. Reintenta.",
   "StatusInvalidDate": "Fecha no válida",
