Adding boardgameintegration items to Expansions list and more localization

--- a/Source Code/i18n/en.json
+++ b/Source Code/i18n/en.json
@@ -129,6 +129,7 @@
   "ExpansionsHeader": "Expansion Logging",
   "ExpansionsTabExpansions": "Expansions",
   "ExpansionsTabFamily": "Family",
+  "ExpansionsIntegrations": "Integrations",
   "ExpansionsQuantity": "Expansion Play Quantity",
   "ExpansionsButtonOkay": "OK",
   "ExpansionsButtonClear": "Clear Selection",
