--- a/Source Code/i18n/es.json
+++ b/Source Code/i18n/es.json
@@ -130,6 +130,7 @@
   "ExpansionsHeader": "¿Expansiones?",
   "ExpansionsTabExpansions": "Expansiones",
   "ExpansionsTabFamily": "Familia",
+  "ExpansionsIntegrations": "Integrations",
   "ExpansionsQuantity": "Cantidad de partidas de la expansión",
   "ExpansionsButtonOkay": "OK",
   "ExpansionsButtonClear": "Borrar selección",
