Special character fix
Fixed the bug where you couldn't delete a player with a special
character in their name.
Also spelling error in en.json file

--- a/Source Code/i18n/en.json
+++ b/Source Code/i18n/en.json
@@ -235,7 +235,7 @@
   "StatusNoResults": "No Results.",
   "StatusDeleting": "Deleting...",
   "StatusPlayDeleted": "Play Deleted.",
-  "StatusViewYourPlays": "View you plays",
+  "StatusViewYourPlays": "View your plays",
   "StatusErrorOccurred": "An Error Occurred",
   "StatusTimedOutTryAgain": "Timed Out. Try Again.",
   "StatusHitASnag": "Hit a snag.",
