Updating i18n with Save this player popup text

--- a/Source Code/i18n/en.json
+++ b/Source Code/i18n/en.json
@@ -211,6 +211,7 @@
   "PopupButtonEditPlayers": "Edit Players",
   "PopupButtonEditLocations": "Edit Locations",
   "PopupButtonSaveLocation": "Save This Location",
+  "PopupButtonSavePlayer": "Save This Player",
   "PopupButtonViewPlays": "View/Edit Play History",
   "PopupButtonResetForm": "Reset All Fields",
   "PopupButtonDeletePlay": "Delete this Play",
